--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "api-rest-nodejs",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">= 18"
+  },
   "license": "MIT",
   "scripts": {
     "dev": "tsx watch src/server.ts",
@@ -10,23 +13,23 @@
     "build": "tsup src --out-dir build",
     "test": "vitest"
   },
-  "devDependencies": {
-    "@rocketseat/eslint-config": "^1.2.0",
-    "@types/node": "^18.15.3",
-    "@types/supertest": "^2.0.12",
-    "eslint": "^8.36.0",
-    "supertest": "^6.3.3",
-    "tsup": "^6.6.3",
-    "tsx": "^3.12.5",
-    "typescript": "^5.0.2"
-  },
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.14.1",
     "knex": "^2.4.2",
-    "sqlite3": "^5.1.6",
-    "vitest": "^0.29.3",
+    "pg": "^8.10.0",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^1.2.0",
+    "@types/supertest": "^2.0.12",
+    "eslint": "^8.36.0",
+    "supertest": "^6.3.3",
+    "tsup": "^6.6.3",
+    "tsx": "^3.12.5",
+    "typescript": "^5.0.2",
+    "vitest": "^0.29.3",
+    "sqlite3": "^5.1.6"
   }
 }
